Testing out Automatic Header Property Detection

--- a/preprocessing/experimentation/pdfplumber.ipynb
+++ b/preprocessing/experimentation/pdfplumber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "from langdetect import detect\n",
     "\n",
-    "pdf = pdfplumber.open('example_pdfs/N25610-56_9707_11_OCT19_Russelhobbs.pdf')\n",
+    "pdf = pdfplumber.open('../example_pdfs/N25610-56_9707_11_OCT19_Russelhobbs.pdf')\n",
     "pages = pdf.pages\n",
     "\n",
     "fontname = 'FWYLUD+MyriadPro-Bold'\n",
