--- a/preprocessing/experimentation/pymupdf.ipynb
+++ b/preprocessing/experimentation/pymupdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3373,7 +3373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3382,7 +3382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3391,7 +3391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3400,7 +3400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3918,7 +3918,7 @@
        " [1, '11\\tTriktys', 184]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3929,7 +3929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3938,7 +3938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3947,7 +3947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3957,7 +3957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3966,7 +3966,7 @@
        "'1\\tZu Ihrer Sicherheit'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3977,7 +3977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3986,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3995,7 +3995,7 @@
        "'Zu Ihrer Sicherheit\\n4\\nDE\\n1 Zu Ihrer Sicherheit\\n1.1 Bestimmungsgemäße \\nVerwendung\\nDas Gerät ist für den Gebrauch im \\nprivaten Haushalt bestimmt, um \\nKaffeegetränke zuzubereiten und \\nMilch und Wasser zu erwärmen.\\nJede andere Verwendung gilt als \\nnicht bestimmungsgemäß und \\nkann zu Personen- und Sachschä-\\nden führen.\\n1.2 Gefahr durch elektrischen \\nStrom\\nVerwenden Sie das Gerät nur, \\nwenn es in technisch einwand-\\nfreiem Zustand ist. \\nFalls das Gerät oder das Netz-\\nkabel beschädigt ist, besteht \\nLebensgefahr durch einen Strom-\\nschlag. Sie dürfen das Gerät \\ndann nicht verwenden, sondern \\nmüssen es vom Hersteller, vom \\nKundendienst oder von einem \\nServicepartner reparieren lassen.\\nSie dürfen das Gerät nicht in Was-\\nser tauchen oder das Netzkabel \\nmit Wasser in Verbindung kom-\\nmen lassen.\\nTrennen Sie das Gerät von der \\nStromversorgung, wenn es län-\\ngere Zeit unbeaufsichtigt ist.\\n1.3 Verbrennungs- und \\nVerbrühungs gefahr\\nAustretende Flüssigkeiten und \\nDämpfe können sehr heiß sein. \\nDie Düsen am Auslauf werden \\nebenfalls sehr heiß.\\n1.4 Allgemeine Sicherheit\\nSie dürfen das Gerät nicht in \\neinem Schrank betreiben und \\nnicht in Höhen über 2000\\xa0m.\\nSie dürfen während des Betriebs \\nnicht in das Gerät greifen.\\nSie dürfen das Gehäuse nicht \\nöffnen oder das Gerät und das \\nZubehör anderweitig manipulie-\\nren.\\n1.5 Kinder\\nKinder dürfen nicht mit dem \\nGerät spielen. \\nSie müssen Kinder, die jünger als \\n8\\xa0Jahre sind, vom Gerät fernhal-\\nten.\\nDas Gerät kann von Kindern, die \\nälter als 8 Jahre sind, sowie von \\nPersonen mit verringerten physi-\\nschen, sensorischen oder menta-\\nlen Fähigkeiten oder Mangel an \\nErfahrung und Wissen benutzt \\nwerden, aber nur wenn sie beauf-\\nsichtigt werden oder bezüglich \\ndes sicheren Gebrauchs des \\nGeräts unterwiesen wurden und \\ndie daraus resultierenden Gefah-\\nren verstehen.\\nReinigung und Wartung dürfen \\nnicht von Kindern, die jünger als \\n8\\xa0Jahre sind, durchgeführt wer-\\nden. Kinder, die älter als 8\\xa0Jahre \\nsind, müssen bei der Reinigung \\nund Wartung beaufsichtigt wer-\\nden.\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4006,7 +4006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4015,7 +4015,7 @@
        "'1\\tZu Ihrer Sicherheit'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4026,7 +4026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4035,7 +4035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4044,7 +4044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4053,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4565,7 +4565,7 @@
        " '11 Triktys']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4576,19 +4576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "'5.1 Zwei Geränke gleichzeitig zubereiten' is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32md:\\Programming\\master\\projektarbeit\\MAI_NLP_PROJECT\\preprocessing\\experimentation\\pymupdf.ipynb Cell 33'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Programming/master/projektarbeit/MAI_NLP_PROJECT/preprocessing/experimentation/pymupdf.ipynb#ch0000041?line=0'>1</a>\u001b[0m headers\u001b[39m.\u001b[39;49mindex(\u001b[39m\"\u001b[39;49m\u001b[39m5.1 Zwei Geränke gleichzeitig zubereiten\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;31mValueError\u001b[0m: '5.1 Zwei Geränke gleichzeitig zubereiten' is not in list"
-     ]
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4597,7 +4596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4607,7 +4606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4616,7 +4615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4626,9 +4625,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Header Found with index 502\n",
+      "Header Found with index 503\n"
+     ]
+    }
+   ],
    "source": [
     "text = page.get_text('dict')\n",
     "page_structure = []\n",
@@ -4694,7 +4702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4755,6 +4763,54 @@
    "outputs": [],
    "source": [
     "toc_cleaned = [el.replace(\" \", \"\").lower() for el in headers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = \"1. INTRODUCTION .................................5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = \"^(\\d\\.\\s+\\w+).+(\\d)\"\n",
+    "res = re.search(pattern, search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.group(2)"
    ]
   },
   {
