--- a/Code/Question_Answering/Model Training/qa_generate_json.ipynb
+++ b/Code/Question_Answering/Model Training/qa_generate_json.ipynb
@@ -23,17 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "def gen_json(context_id, context, questions, path=\"\"):\n",
+    "def gen_json(context_id, context, question, manufacturer, path=\"\"):\n",
     "    \"\"\"Input context and questions and generate json file for SQuAD format.\n",
     "\n",
     "    Parameters\n",
@@ -43,104 +39,41 @@
     "    questions : list of str\n",
     "        List of questions.\n",
     "    \"\"\"\n",
-    "    for i, q in enumerate(questions):\n",
-    "        dic = {\n",
-    "            \"data\": {\n",
-    "                \"text\": context,\n",
-    "                \"question\": q,\n",
-    "            }\n",
+    "    \n",
+    "    # remove \\n from string text and question\n",
+    "    context = context.replace(\"\\n\", \" \").replace(\"_x0002_\", \"\")\n",
+    "    question = question.replace(\"\\n\", \" \").replace(\"_x0002_\", \"\")\n",
+    "    \n",
+    "    dic = {\n",
+    "        \"data\": {\n",
+    "            \"text\": context,\n",
+    "            \"question\": question,\n",
     "        }\n",
+    "    }\n",
+    "        \n",
+    "    with open(f\"{path}qa_{manufacturer}_{context_id}.json\", \"w\") as f:\n",
+    "        json.dump(dic, f)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
-    "        with open(f\"{path}qa_{context_id}_{i}.json\", \"w\") as f:\n",
-    "            json.dump(dic, f)    "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Context 0"
+    "qa_df = pd.read_excel(\"qa_excel.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "context_id = 0\n",
-    "context = \"The boundary of the region from which no escape is possible is called the event horizon. Although the event horizon has an enormous effect on the fate and circumstances of an object crossing it, according to general relativity it has no locally detectable features.[4] In many ways, a black hole acts like an ideal black body, as it reflects no light.[5][6] Moreover, quantum field theory in curved spacetime predicts that event horizons emit Hawking radiation, with the same spectrum as a black body of a temperature inversely proportional to its mass. This temperature is on the order of billionths of a kelvin for black holes of stellar mass, making it essentially impossible to observe directly.\"\n",
-    "questions = [\n",
-    "    \"How could black holes be detected?\",\n",
-    "    \"What is the event horizon?\",\n",
-    "    \"Whats going on?\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "gen_json(context_id, context, questions)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "### Context 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "context_id = 1\n",
-    "context = \"The boundary of the region from which no escape is possible is called the event horizon. Although the event horizon has an enormous effect on the fate and circumstances of an object crossing it, according to general relativity it has no locally detectable features.[4] In many ways, a black hole acts like an ideal black body, as it reflects no light.[5][6] Moreover, quantum field theory in curved spacetime predicts that event horizons emit Hawking radiation, with the same spectrum as a black body of a temperature inversely proportional to its mass. This temperature is on the order of billionths of a kelvin for black holes of stellar mass, making it essentially impossible to observe directly.\"\n",
-    "questions = [\n",
-    "    \"How could black holes be detected?\",\n",
-    "    \"What is the event horizon?\",\n",
-    "    \"Whats going on?\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "gen_json(context_id, context, questions)"
+    "for i, row in qa_df.iterrows():\n",
+    "    gen_json(i, row[\"Context\"], row[\"Question\"], row['Manufacturer'], path=\"qa_json/\")"
    ]
   },
   {
@@ -191,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
