refactoring and little improvements

--- a/Code/Question_Answering/Model Training/QA_Train.ipynb
+++ b/Code/Question_Answering/Model Training/QA_Train.ipynb
@@ -7381,7 +7381,8 @@
     "data.append(open('./generated_training_data/miele_qa.json'))\n",
     "data.append(open('./generated_training_data/melitta_qa.json'))\n",
     "data.append(open('./generated_training_data/qa_complete_marius.json'))\n",
-    "data.append(open('./generated_training_data/questionAnswerJochen.json'))"
+    "data.append(open('./generated_training_data/qa_Jochen.json'))\n",
+    "print(len(data))"
    ],
    "metadata": {
     "id": "SowYzaf5lE93",
@@ -7630,8 +7631,13 @@
   {
    "cell_type": "code",
    "source": [
-    "qa_df_train = qa_df.iloc[0:120]\n",
-    "qa_df_test = qa_df.iloc[120:-1]"
+    "# shuffle the data\n",
+    "qa_df = qa_df.sample(frac=1)\n",
+    "# take 80% as training samples\n",
+    "no_train_samples = int(len(qa_df) * 0.8)\n",
+    "\n",
+    "qa_df_train = qa_df.iloc[0:no_train_samples]\n",
+    "qa_df_test = qa_df.iloc[no_train_samples:-1]"
    ],
    "metadata": {
     "id": "NnV1I7j4tPbq",
