integrated similarity search into the workflow, deleted everything unnecessary. We have to check if the embedding works in load_corpus.ipynb, we also have to check if search_similar_context returns the right contexts.

--- a/Code/Preprocessor/load_corpus.ipynb
+++ b/Code/Preprocessor/load_corpus.ipynb
@@ -11,9 +11,23 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import Code.Clients.client_factory as factory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "with open(\"corpus.json\") as f:\n",
     "    corpus = json.load(f)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -26,7 +40,9 @@
    },
    "outputs": [],
    "source": [
-    "# corpus = corpus und erstes element wegschmeißen"
+    "# corpus = corpus und erstes element wegschmeißen\n",
+    "fp = \"corpus.json\"\n",
+    "corpus = factory.get_file_client().read_file(file_path=fp)"
    ]
   },
   {
@@ -55,7 +71,9 @@
    "source": [
     "import sys\n",
     "sys.path.append(\"D:\\Programming\\master\\MAI_NLP_PROJECT\")\n",
-    "import Code.Clients.client_factory as factory\n",
+    "from Code.SimilaritySearch.embedders import FinetunedAllMiniLMEmbedder\n",
+    "\n",
+    "embedder = FinetunedAllMiniLMEmbedder()\n",
     "\n",
     "for entry in corpus:\n",
     "    manufacturer = entry[\"manufacturer\"]\n",
@@ -81,9 +99,10 @@
     "                            \"headerParagraphText\" : h_paragraph,\n",
     "                            \"subHeaderId\" : sh_id,\n",
     "                            \"SubHeaderText\" : sh_text,\n",
-    "                            \"subHeaderParagraphText\" : sh_paragraph\n",
+    "                            \"subHeaderParagraphText\" : sh_paragraph,\n",
+    "                            \"vector_embedding\" : embedder.embed_list_text([h_text, h_paragraph, sh_text, sh_paragraph])\n",
     "                        }\n",
-    "                        factory.get_meta_client().index_corpusfile_metadata(file)\n",
+    "                        factory.get_context_client().index_context(file)\n",
     "\n",
     "                else:\n",
     "                    file = {\n",
@@ -95,9 +114,10 @@
     "                        \"headerParagraphText\" : h_paragraph,\n",
     "                        \"subHeaderId\" : None,\n",
     "                        \"SubHeaderText\" : None,\n",
-    "                        \"subHeaderParagraphText\" : None\n",
+    "                        \"subHeaderParagraphText\" : None,\n",
+    "                        \"vector_embedding\" : embedder.embed_list_text([h_text, h_paragraph])\n",
     "                    }\n",
-    "                    factory.get_meta_client().index_corpusfile_metadata(file)\n",
+    "                    factory.get_context_client().index_context(file)\n",
     "\n",
     "\n",
     "\n",
@@ -116,7 +136,7 @@
    "outputs": [],
    "source": [
     "import Code.Clients.client_factory as factory\n",
-    "meta = factory.get_meta_client().get_corpusfile_metadata(\"AEG\", \"cm6_1_5st\", \"en\")\n",
+    "meta = factory.get_context_client().get_context(\"AEG\", \"cm6_1_5st\", \"en\")\n",
     "print(meta)"
    ]
   },
@@ -131,10 +151,10 @@
    },
    "outputs": [],
    "source": [
-    "from Code.Coffeeapp.coffeeapp_api.question_answering import QuestionAnswerer\n",
+    "from Code.CoffeeappBackend.coffeeapp_api.question_answering import QuestionAnswerer\n",
     "questionanswerer = QuestionAnswerer(language=\"en\",\n",
     "                                    manufacturer=\"AEG\",\n",
-    "                                    product_name=\"cm6_1_5st\",\n",
+    "                                    product=\"cm6_1_5st\",\n",
     "                                    question=\"How do I make preparations?\"\n",
     "                                    )\n",
     "\n",
@@ -165,7 +185,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -176,7 +200,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,7 +222,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,7 +244,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -230,7 +266,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
