--- a/Code/Preprocessor/load_corpus.ipynb
+++ b/Code/Preprocessor/load_corpus.ipynb
@@ -3,16 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "import json\n",
     "import Code.Clients.client_factory as factory\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -32,41 +33,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "# corpus = corpus und erstes element wegschmeißen\n",
     "fp = \"corpus.json\"\n",
     "corpus = factory.get_file_client().read_file(file_path=fp)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "for lang in corpus[9][\"products\"]:\n",
     "    print(lang['product_id'])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -91,8 +88,8 @@
     "                        sh_text = subheader[\"subHeaderText\"]\n",
     "                        sh_paragraph = subheader[\"paragraphText\"]\n",
     "                        file = {\n",
-    "                            \"manufacturer\" : manufacturer,\n",
-    "                            \"product\" : p_id,\n",
+    "                            \"manufacturer_name\" : manufacturer,\n",
+    "                            \"product_name\" : p_id,\n",
     "                            \"language\" : lang,\n",
     "                            \"headerId\" : h_id,\n",
     "                            \"headerText\" : h_text,\n",
@@ -122,23 +119,52 @@
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import Code.Clients.client_factory as factory\n",
     "meta = factory.get_context_client().get_context(\"AEG\", \"cm6_1_5st\", \"en\")\n",
     "print(meta)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from Code.CoffeeappBackend.coffeeapp_api.question_answering import QuestionAnswerer\n",
+    "questionanswerer = QuestionAnswerer(language=\"en\",\n",
+    "                                    manufacturer=\"AEG\",\n",
+    "                                    product=\"cm6_1_5st\",\n",
+    "                                    question=\"How do I make preparations?\"\n",
+    "                                    )\n",
+    "\n",
+    "if questionanswerer.is_valid():\n",
+    "    questionanswerer.ask()\n",
+    "    print(questionanswerer.answers)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
